# PIXM8

./: .gitignore  README.md
app/: .gitignore  index.html  package-lock.json  package.json
app/scripts/: ensure-python-runtime.mjs  reinstall-python-deps.sh
app/src/: App.css  App.tsx  api.ts  constants.ts
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/src/: backend.rs  lib.rs  main.rs  models.rs  paths.rs  python_setup.rs  setup.rs  voices.rs
app/src/assets/: README.md  games.json  llms.json  personalities.json  stories.json  voices.json
app/src/components/: AddUserModal.tsx  Addons.tsx  ChatHeader.tsx  ChatSplitAvatar.tsx  ChatTranscript.tsx  CreateTiles.tsx  EditUserModal.tsx  EmojiAvatar.tsx  Layout.tsx  (+10 more)
arduino/: README.md  platformio.ini
arduino/src/: Audio.h  Config.cpp  WifiManager.cpp
examples/addons/: README.md
firmware/: README.md
firmware/src/: Audio.cpp  Config.h  LEDHandler.cpp  LEDHandler.h  WifiManager.h  main.cpp
resources/python-backend/: SCHEMA_MIGRATION_DELIVERABLES.md  db_service.py  models.py  pyproject.toml  server.py  tts.py  utils.py
resources/python-backend/db/: __init__.py  addons.py  base.py  conversations.py  devices.py  documents.py  models.py  paths.py  personalities.py  profiles.py  schema.py  seeds.py  service.py  sessions.py  settings.py  user_faces.py  users.py  voices.py
resources/python-backend/engine/: characters.py
resources/python-backend/services/: __init__.py  addons.py  firmware.py  local_packs.py  mdns.py  network.py  pipeline.py  text.py  voice_refs.py  ws_manager.py
(+31 files in other folders)
