[project]
name = "keero-server"
version = "0.1.0"
description = "A cozy AI companion you can shape."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Jakša Tomović" }]

dependencies = [
    "mlx==0.30.1",
    "mlx-lm==0.30.0",
    "mlx-audio[stt,tts]==0.2.9",
    "einops>=0.8.1",
    "transformers==5.0.0rc1",
    "librosa",
    "pyloudnorm",
    "soundfile",
    "tiktoken",
    "soxr",
    "numpy",
    "numba",
    "webrtcvad",
    "uvicorn[standard]==0.40.0",
    "fastapi==0.127.0",
    "python-multipart>=0.0.6",
    "pypdf>=5.0.0",
    "huggingface-hub==1.2.3",
    "esptool==5.1.0",
    "pyserial==3.5",
    "av>=16.0.0",
    "zeroconf>=0.136.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
